# ScalingElections

./: .gitignore  README.md  benchmark.py  pixi.toml  pyproject.toml  scaling_democracy.cu  scaling_democracy.mojo  scaling_elections.cu  scaling_elections.mojo  scaling_elections.py  setup.py  validate_paradox.py
