[project]
name = "ScalingDemocracy"
version = "0.2.0"
description = "GPU-accelerated Schulze voting algorithm"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
urls = { Homepage = "https://github.com/ashvardanian/ScalingDemocracy" }
dependencies = ["numpy>=1.26,<2.0"]

[build-system]
requires = ["setuptools>=65.5.1", "wheel", "pybind11", "numpy>=1.26,<2.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["numba", "cupy-cuda12x", "pycuda>=2025.1.2", "pytest"]

[tool.pixi.workspace]
channels = ["conda-forge", "https://conda.modular.com/max"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
max = ">=25.6.1,<26"

[tool.pixi.pypi-dependencies]
ScalingDemocracy = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
