[project]
name = "ScalingElections"
version = "0.2.0"
description = "GPU-accelerated Schulze voting algorithm in C++/CUDA wrapped into Python ðŸ"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
urls = { Homepage = "https://github.com/ashvardanian/ScalingElections" }
dependencies = ["numpy>=1.26,<2.0"]

[build-system]
requires = ["setuptools>=65.5.1", "wheel", "pybind11", "numpy>=1.26,<2.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cpu = ["numba", "pytest"]
gpu = ["cupy-cuda12x", "pycuda>=2025.1.2"]

[tool.setuptools]
py-modules = ["scaling_elections"]
